syntax = "proto3";

option go_package = "github.com/adrianliechti/wingman/pkg/tool/custom;custom";

package tool;

service Tool {
  rpc Tools (ToolsRequest) returns (ToolsResponse) {}
  rpc Execute (ExecuteRequest) returns (ResultResponse) {}
}

message ToolsRequest {
}

message ToolsResponse {
  repeated Definition definitions = 1;
}

message Definition {
  string name = 1;
  string description = 2;

  string parameters = 3;
}

message ExecuteRequest {
  string name = 1;
  string parameters = 2;
}

message ResultResponse {
  string data = 1;
}